images and layout

--- a/index.html
+++ b/index.html
@@ -1,18 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Dragable</title>
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+    <title>Happy Birthday</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
     <!-- <base href="https://www.w3schools.com/" target="_blank" /> -->
     <meta charset="UTF-8" />
-    <meta name="description" content="BirthDay wishes" />
-    <meta name="keywords" content="Happy Birthday" />
+    <meta name="description" content="BirthDay wish" />
+    <meta name="keywords" content="Happy BirthDay chinni" />
     <meta name="author" content="Bharath J R" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/app.css" />
     <script src="./assets/scripts/app.js"></script>
   </head>
   <body>
+    <header>
+      <h1>
+        <span class="wishheadding wish-1">Happy</span>
+        <span class="wishheadding wish-2">Birth</span>
+        <span class="wishheadding wish-3">Day</span>
+        <span class="wishheadding wish-4">Hamsica C</span>
+        <span class="wishheadding wish-1">Keshav</span>
+      </h1>
+    </header>
 
+    <div class="container">
+      <div class="imgdiv">
+        <img src="./assets/images/1.jpg" class="babyimg imgtag-1" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/2.jpg" class="babyimg imgtag-2" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/3.jpg" class="babyimg imgtag-3" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/4.jpg" class="babyimg imgtag-4" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/5.jpg" class="babyimg imgtag-5" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/6.jpg" class="babyimg imgtag-6" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/7.jpg" class="babyimg imgtag-7" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/8.jpg" class="babyimg imgtag-8" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/9.jpg" class="babyimg imgtag-9" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/10.jpg" class="babyimg imgtag-10" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/11.jpg" class="babyimg imgtag-11" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/12.jpg" class="babyimg imgtag-12" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/13.jpg" class="babyimg imgtag-13" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/14.jpg" class="babyimg imgtag-14" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/15.jpg" class="babyimg imgtag-15" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/16.jpg" class="babyimg imgtag-16" />
+      </div>
+      <div class="imgdiv">
+        <img src="./assets/images/17.jpg" class="babyimg imgtag-17" />
+      </div>
+    </div>
   </body>
 </html>
